# maybe-docker

./: .clang-format  CMakeLists.txt  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build-docker.yaml  ci.yaml
src/: CMakeLists.txt  example.cpp  example.hpp
tests/: CMakeLists.txt  test.cpp
